name:          TCache
version:       0.14
cabal-version: >= 1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
maintainer:    agocorona@gmail.com
synopsis:      A Transactional cache with user-defined persistence
description:
  TCache is a transactional cache with configurable persitence. It allows conventional
  STM transactions for objects that syncronize  with their user-defined storages.
  State in memory and into permanent storage is transactionally coherent.
  .
  It has interface defined for Amazon WS and Yesod Persistent backends defined in tcache-<backend>
  packages.
  Persistent is a multi-backend interface for SQL and non SQL databases such in Mongo-db
  .
  The package implements serializable STM references, access by key and by record field value, triggers,
  full text and field indexation, default serialization and a query language based on record fields
  .
  Since the STM references can be included in data structures and serialized, this is right
  for graph databases and other NoSQL databases.
category:    Data, Database
author:      Alberto Gómez Corona
tested-with: GHC == 7.10.2
data-dir:    ""
extra-source-files:
  demos/DBRef.hs
  demos/indexQuery.hs
  demos/indexText.hs
  demos/basicSample.hs
  demos/caching.hs
  demos/triggerRelational.lhs
  demos/memoization.hs
  demos/DBRef.hs

source-repository head
  type: git
  location: https://github.com/ariep/TCache

library
  build-depends:
    base >= 4 && < 5,
    bytestring -any,
    cereal >= 0.4 && < 0.6,
    cereal-text >= 0.1 && < 0.2,
    containers >= 0.1.0.1,
    directory >= 1.0,
    hashtables,
    ID >= 0.1 && < 0.2,
    mtl -any,
    old-time >= 1.0,
    random >= 1.1 && < 1.2,
    RefSerialize -any,
    stm -any,
    text >= 1.2 && < 1.3,
    vector-binary-instances >= 0.2 && < 0.3,
    text-index >= 0.2 && < 0.3,
    transformers >= 0.3 && < 0.5,
    transformers-compat >= 0.4 && < 0.5
  exposed-modules:
    Data.TCache
    Data.TCache.Defs
    Data.TCache.ID
    Data.TCache.Index
    Data.TCache.Index.Map
    Data.TCache.Index.Text
    Data.TCache.Triggers
    -- Data.Persistent.Collection
    -- Data.Persistent.IDynamic
    Control.Lens.Monadic
  exposed: True
  buildable: True
  extensions:
    OverlappingInstances
    UndecidableInstances
    ScopedTypeVariables
    DeriveDataTypeable
  hs-source-dirs: src
  -- other-modules:
